--- a/themes/boot/_header.toml
+++ b/themes/boot/_header.toml
@@ -1,8 +1,8 @@
 [[headers]]
-  for = ".js*"
+  for = "*.js" # js files should be set this way
   [headers.values]
-  cache-control = "public, max-age=0, must-revalidate"
-  [[headers]]
-  for = ".css*"
+    Cache-Control = "public, max-age=604800"
+[[headers]]
+  for = "*.css" # css files too
   [headers.values]
-  cache-control = "public, max-age=0, must-revalidate"
+    Cache-Control = "public, max-age=604800"
