--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ googleAnalytics = "UA-152851764-2" # Your Analytics ID here
 [params]
     color = "orangered"
     # Schema Information
-    businessname = "BOOT"
+    businessname = "Company Name"
     type = "LocalBusiness" # Enter Your Type of business - schema.org
     pricerange = "2" # Enter Your Price range 1 to 5
     reviewcount = "5" # How many reviews you've got
@@ -18,6 +18,7 @@ googleAnalytics = "UA-152851764-2" # Your Analytics ID here
     address = "123 Sample Street" # Enter Address Here
     city = "Rigaud" # Enter City
     region = "QC" # Enter State or Province Here
+    country = "Canada" #Enter Country Here
     postalcode = "J0P 1P0" # Enter Postal Code
     phone = "+1-123-456-7890" # Enter Phone Number
     email = "info@goldstandardsites.ca" # Enter Your Email
